--- a/README
+++ b/README
@@ -1,64 +1,7 @@
-2.1 Purpose
-In the real world, it is difficult to identify the exact origin of an innovation as it may only be identified once it has already become well established as a variant in the process of becoming a change. A benefit of computer simulation is that it enables us to evaluate hypotheses that might otherwise be difficult or impossible to test in the real world due to a scarcity of data (Railsback and Grimm, 2012: 4). 
-The purpose of this agent-based model of simulation is not so bold as to solve the rather intractable problem of actuation. The model, in its current state, does not address factors that result in innovation failure; because individuals base their adoption decisions purely on threshold levels suggested by the Collective Behavior Model (Granovetter, 1978), all individuals will eventually adopt a given innovation. The goal of this model is to examine the role of social space (e.g. shortest path between an individual and the innovator) and structure (e.g. network density) on the relative order of innovation adoption at an individual and collective-wide level.  
-We represent the world with randomly generated graphs of artificial collectives of individuals or agents, each of which are connected via preferential attachment through a social network, both locally—with speakers in their home collectives—and globally with speakers across all other collectives. We are limited by the representativeness of our model to the real world. Therefore, the results of our model may only reveal possibilities rather than solid explanation. However, these possibilities may be explored further in future research and may have some implications for extending the model to include factors that contribute to innovation failure.
+LingSim v1.0
 
-2.2 Entities, State Variables, and Scales
-The model’s world has four kinds of entities: square patches of land, speakers, links between speakers, and collectives.
-2.2.1 Patches
-The artificial world used for this simulation is an 81 x 81 grid; there is no distance scale used for this simulation so all distances are reported in generic units. Likewise, there is no specific time scale imposed as we are not so much concerned with the length of time language change might take, rather than the order in which it happens. Therefore, all times remain measured in ticks.
-2.2.2 Speakers
-Speakers have five state variables—strong-tie-count, weak-tie-count, innovation?, threshold, and shortest-path. As one might expect, strong-tie-count is simply the sum of strong ties a speaker has, while weak-tie-count is the sum of weak-ties a speaker has. The Boolean state variable innovation? represents whether or not a speaker has adopted the linguistic innovation (a True value indicates that the speaker has adopted the innovation while a False value indicates that the speaker has not adopted the innovation).  A speaker’s threshold value reflects the speaker’s baseline willingness to adopt an innovation. The variable shortest-path is the lowest number of ties found in a breadth-first search of the network between the selected speaker and the speaker-innovator.
-2.2.3 Links
-There are two breeds of links—weak-ties and strong-ties. Both breeds encode which two speakers are on either end of the link. Strong-ties are only formed locally between speakers who inhabit the same collective, reasoning that frequency and duration of contact are predictors of the strength of ties (Mardsen and Campbell, 1984). Weak-ties are formed both locally and globally. 
-2.2.4 Collectives
-Collectives each have a population state variable determined stochastically during initialization (Section 2.5). The population values are used during the generation of speakers at each collective. Collectives also have a network-density state, a value computed as the proportion of actual ties present within the local network of speakers to the number of possible ties present within the local network of speakers. The number of possible ties is calculated as: N*((N-1))/2, where N represents the number of nodes (speakers) in the network. Collectives also encode the average shortest path between their speaker members and the speaker-innovator, the maximum number of strong ties found among its speakers, and the maximum number of weak ties found among its speakers.
+LingSim was developed by Sara Kazemi for an M.A. thesis project in Computational Linguistics at San Diego State University (Forthcoming). It attempts to model the processes of linguistic diffusion, which contributes to language change and variation.
 
-2.3 Process Overview and Scheduling
-The pseudocode in Figure 2.3 provides only a succinct overview and scheduling of the simulation in order to serve as an outline of the more detailed description to follow in Sections 2.5 and 2.7.
- 
-  [Figure 2.3. Simulation pseudocode.]
+The simulation was created in NetLogo v5.0.4, developed by Uri Wilensky at The Center for Connected Learning at Northwestern University. You will need NetLogo (http://ccl.northwestern.edu/netlogo/) to run the simulation. Feel free to utilize the simulation for educational demonstrations or to extend it for your own project! But please cite: Kazemi, S. (2014). LingSim (Version #) [Software] Available from https://github.com/sariously/ling-sim.
 
-2.4 Design Concepts
-2.4.1 Basic principles
-This model relies on several basic principles spanning several fields of study. Many real-world phenomena have been found to have distributions that follow a power law distribution such that one quantity varies as a power of another (Durret, 2007: 90). Jia and Jang (2011) found that the population distribution of natural cities within the United States was predicted by an inverse power law discovered by Zipf (1949) and subsequently known as Zipf’s Law. Similarly, inverse power law distributions have been consistently observed when measuring degree distributions among people in a social network (Durret, 2007: 12). 
- In order to create random worlds that maintain realistic population distributions, we create each world as a scale-free random graph by utilizing the Barabási-Albert Model of Preferential Attachment (1999). The stochastic process of preferential attachment yields a distribution that follows an inverse power law; therefore, we get a graph of nodes (our collectives) such that very few have a large number of connections and the majority have a very small number of connections. If we let the number of connections belonging to each collective be proportional to the number of individuals within that collective (its population), we achieve a population distribution that is comparable to real-world observations. 
-The same process of preferential attachment is followed to create weak-tie relationships between individuals across the global network. The presence of weak-tie relationships is fundamental since this model relies on Granovetter’s notion of the strength of weak ties (1973, 1982), which asserts that weak ties rather than strong ties are fundamental in the exchange of information or innovation to and from one local network to another. No upper-limit on the number of weak-ties is supplied since they require significantly less investment than strong-tie relationships. However, the model accounts for the distribution of popularity or Labov’s (1980) prestige by creating weak-tie relationships via preferential attachment.
-In addition to this, Granovetter’s (1978) Model of Collective Behavior is applied to Rogers’ (2003) five adoption categories in order to determine individual adoption threshold levels.
-2.4.2 Interaction
-Speakers interact by communicating with other speakers with whom they have ties; however, speakers interact more often with their strong ties (at every tick) than with their weak ties (one random weak tie selected at every tick).
-2.4.3 Sense
-Speakers have access to their internal state values as well as the ability to discern positive or negative relationships between their collective and another collective. Speakers are also aware of the general state of an innovation. They are able to detect if an innovation has become adopted by the majority of a collective and they are able to discern the number of neighbors within their own collective have adopted the innovation.
-2.4.4 Adaptive Behavior
-Speakers adapt to their environment through external and internal evaluation. When exposed to an innovative linguistic feature, a speaker will evaluate whether or not it should be adopted based on a randomly assigned adoption threshold level. A given speaker will only adopt the innovation if the percentage of local collective speakers that have already adopted the innovation is equivalent or greater than the speaker’s internal adoption threshold.
-2.4.5 Emergence
-If the widespread adoption of a linguistic innovation occurs among a population, a new linguistic feature officially emerges as a product of linguistic change. Because of the stochastically-based and goal-oriented adoption decisions that the speakers make are non-deterministic, different patterns of adoption and language change (majority adoption) emerge. 
-2.4.6 Stochasticity
-By the nature of Netlogo, all agents (sites, speakers, links, patches) are generated in pseudorandom order. In addition to the native stochasticity of Netlogo, the population counts of each site are assigned randomly from a distribution that follows an inverse power law, created through the process of preferential attachment. This same process is used to assign the number of weak-ties each speaker in the world has. Strong-ties are generated randomly between local neighbors in each site, each speaker being limited a random number of strong-ties drawn from a Poisson distribution with a mean of 2. Lastly, each speaker’s threshold level is assigned randomly from a normal distribution. 
-2.4.7 Goal
-The goal of the innovators is to facilitate change by either innovating or adopting innovations. All other individuals will want to preserve their current linguistic inventory unless their internal adoption thresholds are reached or surpassed by the percentage of the local population’s adoption of the innovation.
-2.4.8 Prediction
-Speakers do not use prediction in this model.
-2.4.9 Observation
-To facilitate the observation of the patterns of language change, which occur out of individual interactions, the simulation outputs data pertaining to two dependent variables—the tick during which each individual adopted the innovation and the tick during which the majority (>50% of the population) of a collective adopted the innovation. Speaker adoption time will be analyzed to find possible effects of speaker adoption categories (categorized by threshold level), the number of weak ties a speaker has (categorized into discrete ranges), the number of strong ties a speaker has (categorized into discrete ranges), and the shortest path from the speaker to innovator (categorized into discrete ranges). Collective majority adoption times will be similarly analyzed to find possible effects of network density, the maximum number of weak ties, the maximum number of strong ties, and the average shortest path from the collective’s speakers to the innovator (all of these are categorized into discrete ranges). Output is generated over 300 total simulation runs—100 runs each of worlds with 30, 60, and 90 collectives. 
-
-2.5 Initialization
-The simulation is initialized by generating a random graph of a user-provided number of collectives on an 81 x 81 grid. Collectives are created pseudorandomly (i.e., Collective 0 need not be the first collective created and need not be followed by Collective 1 during the creation process) one-by-one. To attain a realistic map of collectives with a population distribution that is consistent with an inverse power-law, the process of preferential attachment is employed. 
-With the exception of the first collective generated, each new collective created is linked to a pre-existing collective via preferential attachment. Using preferential attachment in this way ensures that there will be a large proportion of collectives that have few connections (a low degree of connections) and a small proportion of collectives that have many connections (a high degree of connections)—a distribution which follows an inverse power law. The degree of connections of each collective are then used to determine the population count of each collective, resulting in a high number of low-population collectives and very few high-population collectives. After each collective population value is determined, the links between all collectives are cleared as they are not used for any purpose beyond establishing population values. 
-The population values of each collective are then used to generate speakers at each collective and the speakers encode which collective they belong to. Each speaker starts out with their Boolean innovation? variable set to False. Each speaker is randomly assigned a threshold-level value (refer back to Table 1.3 for values) from a normal distribution. As speakers are generated, they form weak-ties with other speakers through preferential attachment. This results in weak-ties both within and across local networks. Strong-ties between speakers are generated randomly within local networks, each speaker being limited a random number of strong-ties drawn from a Poisson distribution with a mean of 2. The network-density of each collective is then computed. Finally, one random speaker is chosen to create a linguistic innovation, which results in that speaker setting its innovation? value to True. 
-Figure 2.5 illustrates a possible world initialized by the simulation. The target symbols, sized based on population, represent collectives, with the dots surrounding each target symbol being the individuals that comprise each collective. Colors are randomly applied to collectives (which carry over to individuals) in order to facilitate visual differentiation. The grey and white lines are ties linking one individual to another. Grey lines indicate weak ties while white lines indicate strong ties.
- 
-[Figure 2.5. A randomly generated world of 30 collectives.]
-
-2.6 Input Data
-The number of collectives generated during initialization is controlled by a slider that can be manipulated by the user to create 10-100 collectives.
-
-2.7 Submodels
-2.7.1 Communication
-On every tick, all individuals that have adopted the innovation are allowed to communicate with all of their local strong ties who have yet to adopt the innovation and two randomly selected weak-ties who have yet to adopt the innovation. This is modeled by creating a list of these individuals, which are then subjected to the evaluation phase.
-2.7.2 Evaluation
-All individuals selected in the communication phase must evaluate whether or not they should adopt the innovation. The 2.5% of each collective population that are innovators will adopt any innovation encountered, while the remaining individuals will evaluate whether or not their adoption thresholds have been reached or surpassed by comparing the value to the percentage of local individuals who have already adopted the innovation. If this condition is satisfied, the innovation is adopted. 
-2.7.3 Adoption
-If the result of the speaker’s evaluation process is to adopt the innovation, that speaker’s innovation? value is set to True.
-
-
+Once you download this code and open it in NetLogo, you will be able to see how it works by looking at the code under the Code tab and through a written description (following the ODD Protocol) under the Info tab.
